--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Deploy to K8s
         run: |
-          kubectl apply -f k8s/deployment.yml --insecure-skip-tls-verify=true
+          kubectl apply -f k8s/deployment.yml --insecure-skip-tls-verify=true --validate=false
