--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,24 @@
-name: Deploy to RMUTI
+name: Deploy to RMUTI Cluster
+
 on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write # Required to save the image to GitHub
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      # This step creates a lowercase version of the repo name for the image tag
+      - name: Set Image Name to Lowercase
+        run: |
+          echo "IMAGE_NAME=ghcr.io/${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -18,11 +27,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          # Uses the lowercase environment variable we created
+          tags: ${{ env.IMAGE_NAME }}:latest
 
       - name: Set Kubernetes Context
         uses: azure/k8s-set-context@v3
@@ -31,5 +42,13 @@ jobs:
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
 
       - name: Deploy to K8s
-        run: |
-          kubectl apply -f k8s/deployment.yml --insecure-skip-tls-verify=true --validate=false
+        uses: azure/k8s-deploy@v4
+        with:
+          namespace: prakai-project-01
+          manifests: |
+            k8s/deployment.yml
+          # This will automatically find the image in your YAML and replace it
+          images: |
+            ${{ env.IMAGE_NAME }}:latest
+          skip-tls-verify: true
+          arguments: "--validate=false"
