--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -4,12 +4,12 @@ metadata:
   name: php-ingress
   namespace: prakai-project-01
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    # This ensures the app receives the request correctly even with the sub-path
+    # Keep the rewrite but remove the ingress.class annotation
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx # <--- Add this line instead of the annotation
   rules:
-  - host: project.cpe.rmuti.ac.th  # <--- Updated Domain
+  - host: project.cpe.rmuti.ac.th
     http:
       paths:
       - path: /prakai-project-0/
