Change ingressClassName to 'traefik'
Updated ingress class name to 'traefik' in deployment configuration.

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -36,9 +36,8 @@ kind: Ingress
 metadata:
   name: php-ingress
   namespace: prakai-project-01
-  # Removed Nginx-specific annotations
 spec:
-  ingressClassName: traefik # <--- Changed to traefik
+  ingressClassName: traefik
   rules:
   - host: project.cpe.rmuti.ac.th
     http:
