Change namespace to 'xyz' and add resource limits
Updated namespace from 'prakai-project-01' to 'xyz' in Deployment, Service, and Ingress configurations. Added resource limits for the PHP container.

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: php-app
-  namespace: prakai-project-01
+  namespace: xyz
 spec:
   replicas: 1
   selector:
@@ -16,6 +16,10 @@ spec:
       containers:
       - name: php-container
         image: ghcr.io/placeholder:latest
+        resources:
+          limits:
+            cpu: "1000m"
+            memory: "1Gi"
         ports:
         - containerPort: 80
 ---
@@ -23,26 +27,25 @@ apiVersion: v1
 kind: Service
 metadata:
   name: php-service
-  namespace: prakai-project-01
+  namespace: xyz
 spec:
   selector:
     app: php-app
   ports:
     - port: 80
-      targetPort: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: php-ingress
-  namespace: prakai-project-01
+  namespace: xyz
 spec:
   ingressClassName: traefik
   rules:
   - host: project.cpe.rmuti.ac.th
     http:
       paths:
-      - path: /prakai-project-0
+      - path: /xyz
         pathType: Prefix
         backend:
           service:
