--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -52,3 +52,58 @@ spec:
             name: php-service
             port:
               number: 80
+root@kube-maste-1:~/k8s/xyz# cat k8s/deployment.yml 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: php-app
+  namespace: xyz
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: php-app
+  template:
+    metadata:
+      labels:
+        app: php-app
+    spec:
+      containers:
+      - name: php-container
+        image: ghcr.io/placeholder:latest
+        resources:
+          limits:
+            cpu: "1000m"
+            memory: "1Gi"
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: php-service
+  namespace: xyz
+spec:
+  selector:
+    app: php-app
+  ports:
+    - port: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: php-ingress
+  namespace: xyz
+spec:
+  ingressClassName: traefik
+  rules:
+  - host: project.cpe.rmuti.ac.th
+    http:
+      paths:
+      - path: /xyz
+        pathType: Prefix
+        backend:
+          service:
+            name: php-service
+            port:
+              number: 80
